--- a/test/index.html
+++ b/test/index.html
@@ -28,11 +28,23 @@
     <script src="xml.js"></script>
     <script src="connection-adapter.js"></script>
     <script src="connection.js"></script>
+    <script src="entity.js"></script>
+    <script src="message.js"></script>
+
+    <!-- mixins -->
+    <script src="mixins/chat-recipient.js"/>
+    <script src="mixins/roster-item.js"/>
+    <script src="mixins/presence-subscriber.js"/>
+
+    <script src="mixins/chat-state-notification.js"/>
+
+    <script src="mixins/discoverable-service.js"/>
+
+    <!-- services -->
+    <script src="services/chat.js"></script>
     <script src="presence.js"></script>
     <script src="roster.js"></script>
-    <script src="chat.js"></script>
     <script src="disco.js"></script>
-    <script src="message.js"></script>
     <script src="ping.js"></script>
 
     <script>
