Completed tests for Service Discovery and the the Discoverable mixin.   * Removed DiscoItem, since it is a plain JavaScript Object.   * Split the Disco tests into their own files.   * Fixed the insanity and stangeness that was the Disco object structure.

--- a/test/index.html
+++ b/test/index.html
@@ -32,19 +32,20 @@
     <script src="message.js"></script>
 
     <!-- mixins -->
-    <script src="mixins/chat-recipient.js"/>
-    <script src="mixins/roster-item.js"/>
-    <script src="mixins/presence-subscriber.js"/>
+    <script src="mixins/chat-recipient.js"></script>
+    <script src="mixins/roster-item.js"></script>
+    <script src="mixins/presence-subscriber.js"></script>
 
-    <script src="mixins/chat-state-notification.js"/>
+    <script src="mixins/chat-state-notification.js"></script>
 
-    <script src="mixins/discoverable-service.js"/>
+    <script src="mixins/disco.js"></script>
+    <script src="mixins/discoverable.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
     <script src="presence.js"></script>
     <script src="roster.js"></script>
-    <script src="disco.js"></script>
+    <script src="services/disco.js"></script>
     <script src="ping.js"></script>
 
     <script>
