--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,7 @@
 
     <!-- mixins -->
     <script src="mixins/chat-recipient.js"></script>
-    <script src="mixins/roster-item.js"></script>
+    <script src="mixins/roster.js"></script>
     <script src="mixins/presence-subscriber.js"></script>
 
     <script src="mixins/chat-state-notification.js"></script>
@@ -44,7 +44,7 @@
     <!-- services -->
     <script src="services/chat.js"></script>
     <script src="presence.js"></script>
-    <script src="roster.js"></script>
+    <script src="services/roster.js"></script>
     <script src="services/disco.js"></script>
     <script src="ping.js"></script>
 
