Added tests to satisfy the presence service, and made subsequent fixes to it.

--- a/test/index.html
+++ b/test/index.html
@@ -32,21 +32,16 @@
     <script src="message.js"></script>
 
     <!-- mixins -->
-    <script src="mixins/chat-recipient.js"></script>
     <script src="mixins/roster.js"></script>
-    <script src="mixins/presence-subscriber.js"></script>
-
-    <script src="mixins/chat-state-notification.js"></script>
 
     <script src="mixins/disco.js"></script>
     <script src="mixins/discoverable.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
-    <script src="presence.js"></script>
+    <script src="services/presence.js"></script>
     <script src="services/roster.js"></script>
     <script src="services/disco.js"></script>
-    <script src="ping.js"></script>
 
     <script>
       new YAHOO.tool.TestLogger();
