Added tests for the Presence mixin and 'sendChat' for the Chat Mixin, fixing failures appropriately.

--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,8 @@
 
     <!-- mixins -->
     <script src="mixins/roster.js"></script>
-
+    <script src="mixins/presence.js"></script>
+    <script src="mixins/chat.js"></script>
     <script src="mixins/disco.js"></script>
     <script src="mixins/discoverable.js"></script>
 
