added JID mixin and tests

--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,7 @@
     <script src="message.js"></script>
 
     <!-- mixins -->
+    <script src="mixins/jid.js"></script>
     <script src="mixins/roster.js"></script>
     <script src="mixins/presence.js"></script>
     <script src="mixins/chat.js"></script>
