moved test/object to test/base

--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
     <!-- Load our test suites. -->
     <script src="xc.test.js"></script>
     <script src="namespace.js"></script>
-    <script src="object.js"></script>
+    <script src="base.js"></script>
     <script src="xml.js"></script>
     <script src="connection-adapter.js"></script>
     <script src="connection.js"></script>
