added mixin for handler/callback regsitration

--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,7 @@
     <script src="mixins/chat.js"></script>
     <script src="mixins/disco.js"></script>
     <script src="mixins/discoverable.js"></script>
+    <script src="mixins/handler-registration.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
