added tests for core.js

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
 
     <!-- Load our test suites. -->
     <script src="xc.test.js"></script>
+    <script src="core.js"></script>
     <script src="namespace.js"></script>
     <script src="base.js"></script>
     <script src="xml.js"></script>
