All tests passing, JSLint passing.   * Updated JSLint make utility to work like its supposed to.

--- a/test/index.html
+++ b/test/index.html
@@ -26,12 +26,13 @@
     <script src="core.js"></script>
     <script src="namespace.js"></script>
     <script src="base.js"></script>
-    <script src="xc_dom-helper.js"></script>
+    <script src="xc_dom_helper.js"></script>
     <script src="xml.js"></script>
-    <script src="connection-adapter.js"></script>
+    <script src="connection_adapter.js"></script>
     <script src="connection.js"></script>
     <script src="entity.js"></script>
     <script src="message.js"></script>
+    <script src="stanza.js"></script>
 
     <!-- mixins -->
     <script src="mixins/jid.js"></script>
@@ -40,7 +41,7 @@
     <script src="mixins/chat.js"></script>
     <script src="mixins/disco.js"></script>
     <script src="mixins/discoverable.js"></script>
-    <script src="mixins/handler-registration.js"></script>
+    <script src="mixins/handler_registration.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
