Finished testing chat state notifications.

--- a/test/index.html
+++ b/test/index.html
@@ -43,6 +43,9 @@
     <script src="mixins/discoverable.js"></script>
     <script src="mixins/handler_registration.js"></script>
 
+    <script src="mixins/chat_state_notification_entity.js"></script>
+    <script src="mixins/chat_state_notification_message.js"></script>
+
     <!-- services -->
     <script src="services/chat.js"></script>
     <script src="services/presence.js"></script>
