Working demo with basic IM and Presence information.

--- a/examples/index.html
+++ b/examples/index.html
@@ -28,9 +28,9 @@
   <div id="body">
   <div id="info" class="popup">
     <table cellpadding="0" cellspacing="0">
-      <tr><td>JID</td><td>seoman@erkynland.hayholt.com</td></tr>
-      <tr><td>Name</td><td>Seoman Snowlock</td></tr>
-      <tr><td>Groups</td><td>League of the Scroll</td></tr>
+      <tr><td>JID</td><td class="jid">seoman@erkynland.hayholt.com</td></tr>
+      <tr><td>Name</td><td class="name">Seoman Snowlock</td></tr>
+      <tr><td>Groups</td><td class="groups">League of the Scroll</td></tr>
     </table>
     <div class="arrow border top"></div>
     <div class="arrow top"></div>
@@ -62,21 +62,6 @@
     </div>
     <div class="wrapper">
       <div class="items">
-        <div class="item">
-          <span class="name">Simon Snowlock</span>
-          <span class="show">away</span>
-          <div class="status">Slaying dragons</div>
-        </div>
-        <div class="item">
-          <span class="name">Rachel the Dragon</span>
-          <span class="show">away</span>
-          <div class="status">Fighting grime</div>
-        </div>
-        <div class="item">
-          <span class="name">Binabik</span>
-          <span class="show">away</span>
-          <div class="status">Drinking Kangkang</div>
-        </div>
       </div>
     </div>
   </div>
