Moved custom presence object to be a PresenceStanza.

--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,8 @@
     <script src="connection_adapter.js"></script>
     <script src="connection.js"></script>
     <script src="entity.js"></script>
-    <script src="message.js"></script>
+    <script src="message_stanza.js"></script>
+    <script src="presence_stanza.js"></script>
     <script src="stanza.js"></script>
 
     <!-- mixins -->
