Added support for Roster Item Exchange: XEP-0144.

--- a/test/index.html
+++ b/test/index.html
@@ -46,6 +46,7 @@
 
     <script src="mixins/chat_state_notification_entity.js"></script>
     <script src="mixins/chat_state_notification_message.js"></script>
+    <script src="mixins/rosterx.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
