Added support for vCard: XEP-0054.

--- a/test/index.html
+++ b/test/index.html
@@ -47,12 +47,14 @@
     <script src="mixins/chat_state_notification_entity.js"></script>
     <script src="mixins/chat_state_notification_message.js"></script>
     <script src="mixins/rosterx.js"></script>
+    <script src="mixins/v_card.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
     <script src="services/presence.js"></script>
     <script src="services/roster.js"></script>
     <script src="services/disco.js"></script>
+    <script src="services/v_card.js"></script>
 
     <script>
       new YAHOO.tool.TestLogger();
