--- a/test/index.html
+++ b/test/index.html
@@ -26,6 +26,7 @@
     <script src="core.js"></script>
     <script src="namespace.js"></script>
     <script src="base.js"></script>
+    <script src="util.js"></script>
     <script src="xc_dom_helper.js"></script>
     <script src="xml.js"></script>
     <script src="connection_adapter.js"></script>
