Fixed a memory leak in the Strophe Adapter when nothing comes back from the server.

--- a/test/index.html
+++ b/test/index.html
@@ -35,6 +35,7 @@
     <script src="message_stanza.js"></script>
     <script src="presence_stanza.js"></script>
     <script src="stanza.js"></script>
+    <script src="strophe_adapter.js"></script>
 
     <!-- mixins -->
     <script src="mixins/jid.js"></script>
