Added support for Delayed Delivery (XEP-0203)

--- a/test/index.html
+++ b/test/index.html
@@ -50,6 +50,7 @@
     <script src="mixins/chat_state_notification_message.js"></script>
     <script src="mixins/rosterx.js"></script>
     <script src="mixins/v_card.js"></script>
+    <script src="mixins/delayed_delivery.js"></script>
 
     <!-- services -->
     <script src="services/chat.js"></script>
