XEP-0049: Private XML Storage
Added support for getting and setting data stored in Private XML Storage
as per the XEP.

--- a/test/index.html
+++ b/test/index.html
@@ -58,6 +58,7 @@
     <script src="services/roster.js"></script>
     <script src="services/disco.js"></script>
     <script src="services/v_card.js"></script>
+    <script src="services/private_storage.js"></script>
 
     <script>
       new YAHOO.tool.TestLogger();
